Integration tests finished, only missing the validation